--- a/provision_lab.yml
+++ b/provision_lab.yml
@@ -1,4 +1,14 @@
-- import_playbook: find_amis.yml
+---
+- name: Find ec2 amis
+  hosts: localhost
+  connection: local
+  become: no
+  gather_facts: no
+  vars_files:
+    - "group_vars/all/vars"
+    - "group_vars/all/vault"
+  roles:
+    - ec2-find-amis
 
 - name: Generate users and nodes lists
   hosts: localhost
@@ -6,47 +16,10 @@
   become: no
   gather_facts: no
   vars_files:
-    - hosting-node-ec2.yml
-    - "{{ workshop_name }}-template-nodes-ec2.yml"
-  tasks:
-    - name: generate users list
-      set_fact:
-        users: "{{ users|default([]) + [ {'name': 'student' + item, 'username': 'student' + item, 'email': 'student' + item + '@example.com'} ] }}"
-      with_sequence: start="{{ student_count_start }}" end="{{ student_count_end }}"
-      when: student_count_start is defined and student_count_end is defined
-
-    - name: initialize nodes variable
-      set_fact:
-        nodes: "{{ hosting_nodes }}"
-
-    - name: generate nodes list
-      set_fact:
-        nodes: "{{ nodes }} + {{ template_nodes }}"
-      with_items:
-        - "{{ users }}"
-
-    - debug:
-        var: nodes
-
-    - name: generate windows only nodes list
-      set_fact:
-        windows_nodes: "{{ windows_nodes|default([]) + [ item ] }}"
-      with_items:
-        - "{{ nodes }}"
-      when: item.os_type is defined and item.os_type == 'windows'
-
-    - debug:
-        var: windows_nodes
-
-    - name: generate linux only nodes list
-      set_fact:
-        linux_nodes: "{{ linux_nodes|default([]) + [ item ] }}"
-      with_items:
-        - "{{ nodes }}"
-      when: item.os_type is not defined or item.os_type == 'linux'
-
-    - debug:
-        var: linux_nodes
+    - "workshop_nodes\{{ workshop_name }}\hosting-nodes-ec2.yml"
+    - "workshop_nodes\{{ workshop_name }}\student-nodes-ec2.yml"
+  roles:
+    - generate-nodes-and-users
 
 - name: provision linux ec2 instances
   hosts: localhost
