disable windows node temporarily

--- a/provision_lab.yml
+++ b/provision_lab.yml
@@ -50,7 +50,7 @@
   hosts: localhost
   become: no
   roles:
-    - create-runtime-inventory
+    #- create-runtime-inventory
     - generate-content
 
 - name: configure common options on all linux nodes
