--- a/roles/create-runtime-inventory/tasks/main.yml
+++ b/roles/create-runtime-inventory/tasks/main.yml
@@ -4,7 +4,7 @@
     name: "{{ item.tagged_instances[0].public_ip }}"
     ansible_host: "{{ item.tagged_instances[0].public_ip }}"
     ansible_user: ec2-user
-    groups: lab_hosts,control_nodes,tag_app_management_lightbulb
+    groups: lab_hosts,control_nodes,tag_role_control,tag_app_management_lightbulb
   with_items: "{{ instances.results }}"
   when: ('management_lightbulb' in item.invocation.module_args.instance_tags.app) and ('control' == item.invocation.module_args.instance_tags.role)
   changed_when: no
