add control node

--- a/provision_lab.yml
+++ b/provision_lab.yml
@@ -147,7 +147,7 @@
 #      users: "{{ hostvars.localhost.users }}"
 
 - name: configure control node
-  hosts: control_nodes
+  hosts: tag_role_control:&tag_app_management_lightbulb
   become: yes
   roles:
     - role: control-node
