add control node

--- a/roles/hosting-generate-html/defaults/main.yml
+++ b/roles/hosting-generate-html/defaults/main.yml
@@ -1,3 +1,4 @@
 ---
 workshop_content_git_repo_url: https://github.com/oatakan/ansible-workshop.git
+workshop_decks_git_repo_url: https://github.com/ansible/lightbulb.git
 workshop_ascii_doc_file_name: doc/ansible-workshop-lab-guide.adoc
