--- a/roles/hosting-generate-html/tasks/main.yml
+++ b/roles/hosting-generate-html/tasks/main.yml
@@ -19,6 +19,25 @@
   delay: 3
   retries: 5
 
+- name: create decks directory
+  file:
+    path: /usr/share/nginx/html/decks
+    state: directory
+
+- name: checkout the decks from git
+  git:
+    repo: "{{ workshop_decks_git_repo_url }}"
+    dest: /tmp/decks
+    accept_hostkey: yes
+    clone: yes
+
+- name: copy decks
+  copy:
+    src: /tmp/decks/decks/
+    dest: /usr/share/nginx/html/decks/
+    directory_mode: yes
+    remote_src: yes
+
 - name: create workshop content directory
   file:
     path: /usr/share/nginx/html/workshop
@@ -28,6 +47,8 @@
   git:
     repo: "{{ workshop_content_git_repo_url }}"
     dest: /tmp/workshop-content
+    accept_hostkey: yes
+    clone: yes
 
 - name: generate html
   command: asciidoctor /tmp/workshop-content/{{ workshop_ascii_doc_file_name }} -D /usr/share/nginx/html/workshop -o index.html
