add nginx ssl role and control node wetty service behind nginx proxy on the hosting node

--- a/provision_lab.yml
+++ b/provision_lab.yml
@@ -191,7 +191,9 @@
   become: yes
   roles:
     - provision-dns-ec2
-    - nginx
+    - geerlingguy.repo-epel
+    - geerlingguy.certbot
+    - nginx-ssl
     - hosting-generate-html
     - hosting-upload-content
 
