--- a/roles/gitlab-postconfig/tasks/main.yml
+++ b/roles/gitlab-postconfig/tasks/main.yml
@@ -16,23 +16,23 @@
   debug: msg="https://{{ hostname | lower }}.{{ dns_domain_name }}/{{ item.username }}/ansible-playbooks"
   with_items: "{{ users }}"
 
-- name: GitLab Post | Login with LDAP creds for each user
-  uri:
-    url: https://{{ inventory_hostname }}/api/v4/projects
-    method: GET
-    user: "{{ item.username }}"
-    password: "{{ users_password }}"
-    force_basic_auth: yes
-    validate_certs: no
-  with_items: "{{ users }}"
-  delegate_to: localhost
-  become: no
-  register: projects_list
+#- name: GitLab Post | Login with LDAP creds for each user
+#  uri:
+#    url: https://{{ inventory_hostname }}/api/v4/projects
+#    method: GET
+#    user: "{{ item.username }}"
+#    password: "{{ users_password }}"
+#    force_basic_auth: yes
+#    validate_certs: no
+#  with_items: "{{ users }}"
+#  delegate_to: localhost
+#  become: no
+#  register: projects_list
 
-- debug:
-    msg: "list of projects {{ item }}"
-  with_items: "{{ projects_list.results }}"
-  when: projects_list | success
+#- debug:
+#    msg: "list of projects {{ item }}"
+#  with_items: "{{ projects_list.results }}"
+#  when: projects_list | success
 
 #- name: GitLab Post | Create projects via API
 #  uri:
@@ -144,9 +144,6 @@
 #  with_sequence: count="{{ user_count }}"
 #  register: gitlab_users
 #  changed_when: "user_prefix + item + 'already exists' not in gitlab_users.stdout"
-
-- debug:
-    msg: "gitlab hostname is {{ inventory_hostname }}"
 
 #- name: GitLab Post | Create local users via API
 #  uri:
