--- a/roles/wetty/handlers/main.yml
+++ b/roles/wetty/handlers/main.yml
@@ -6,7 +6,7 @@
   service: name=wetty state=restarted
 
 - name: reload systemd
-  command: systemctl daemon-reload
+  systemd: daemon_reload=yes
 
 - name: sshd
   service: name=sshd state=restarted
