--- a/provision_lab.yml
+++ b/provision_lab.yml
@@ -187,6 +187,7 @@
 - name: setup hosting
   hosts: tag_role_hosting:&tag_app_management_lightbulb
   become: yes
+  # on standard RHEL AMIs extras repo not enabled which is needed by the geerlingguy.certbot role
   pre_tasks:
     - name: enable optional repos
       command: yum-config-manager --enable rhui-REGION-rhel-server-extras rhui-REGION-rhel-server-optional
