--- a/roles/gitlab-postconfig/tasks/main.yml
+++ b/roles/gitlab-postconfig/tasks/main.yml
@@ -170,7 +170,6 @@
 
 - name: GitLab Post | Create local users
   gitlab_user:
-    #server_url: https://{{ hostname | lower }}.{{ dns_domain_name }}
     server_url: https://{{ inventory_hostname }}
     validate_certs: False
     login_user: root
@@ -184,6 +183,7 @@
   with_items: "{{ users }}"
   delegate_to: localhost
   become: no
+  ignore_errors: yes
 
 - name: GitLab Post | Create Projects in GitLab
   command: ./create_project.py -s "https://{{ hostname | lower }}.{{ dns_domain_name }}" -u {{ item.username }} -p {{ users_password }} -r {{ item.username }}-playbooks
