--- a/roles/windows-common/tasks/main.yml
+++ b/roles/windows-common/tasks/main.yml
@@ -5,6 +5,19 @@
     adapter_names: "*"
     ipv4_addresses: "{{ dns_servers }}"
 
+- name: Ensure local workgroup first
+  win_domain_membership:
+    workgroup_name: "{{ username }}"
+    domain_admin_user: "Admin@{{ dns_domain_name }}"
+    domain_admin_password: "{{ domain_admin_password }}"
+    state: workgroup
+  register: winworkgroup
+  until: winworkgroup|success
+  delay: 3
+  retries: 5
+
+- debug: var=winworkgroup
+
 - name: Join Domain
   win_domain_membership:
     dns_domain_name: "{{ dns_domain_name }}"
