always reboot after domain membership task

--- a/roles/windows-common/tasks/main.yml
+++ b/roles/windows-common/tasks/main.yml
@@ -40,7 +40,7 @@
 
 - name: Reboot if needed
   win_reboot:
-  when: windomain.reboot_required
+  #when: windomain.reboot_required
 
 - name: Get current DNS search string
   win_shell: Get-DnsClientGlobalSetting | Select SuffixSearchList 
