--- a/roles/windows-common/tasks/main.yml
+++ b/roles/windows-common/tasks/main.yml
@@ -19,7 +19,7 @@
 #- debug: var=winworkgroup
 
 #- name: Reset domain membership
-#  win_shell: $computer = Get-WmiObject Win32_ComputerSystem; $computer.UnjoinDomainOrWorkGroup("{{ ansible_password }}", "{{ ansible_user }}", 0); $computer.JoinDomainOrWorkGroup("{{ dns_domain_name }}", "{{ ansible_password }}", "{{ ansible_user }}", $null, 3)
+#  win_shell: $computer = Get-WmiObject Win32_ComputerSystem; $computer.UnjoinDomainOrWorkGroup("{{ domain_admin_password }}", "Admin@{{ dns_domain_name }}", 0); $computer.JoinDomainOrWorkGroup("{{ dns_domain_name }}", "{{ domain_admin_password }}", "Admin@{{ dns_domain_name }}", $null, 3)
 #  register: reset_domain_membership
 
 #- debug:
@@ -42,6 +42,15 @@
   win_psmodule:
     name: xComputerManagement
     state: present
+
+- name: Join Workgroup
+  win_dsc:
+    resource_name: xComputer
+    Name: "{{ hostname }}"
+    WorkGroupName: "Workgroup"
+    credential_username: "Administrator"
+    credential_password: "{{ ansible_password }}"
+  register: dsc_join_workgroup
 
 - name: Join Domain
   win_dsc:
@@ -88,7 +97,7 @@
     GroupName: Remote Desktop Users
     Ensure: Present
     MembersToInclude: '{{ username }}@{{ dns_domain_name }}'
-    credential_username: "Admin@{{ dns_domain_name }}"
+    credential_username: "Administrator"
     credential_password: "{{ domain_admin_password }}"
   register: add_user_to_rdp_group
 
