--- a/roles/windows-common/tasks/main.yml
+++ b/roles/windows-common/tasks/main.yml
@@ -19,7 +19,8 @@
 #- debug: var=winworkgroup
 
 - name: Reset domain membership
-  win_shell: $computer = Get-WmiObject Win32_ComputerSystem; $computer.UnjoinDomainOrWorkGroup("{{ domain_admin_password }}", "Admin@{{ dns_domain_name }}", 0); $computer.JoinDomainOrWorkGroup("{{ dns_domain_name }}", "{{ domain_admin_password }}", "Admin@{{ dns_domain_name }}", $null, 3)
+  win_shell: Reset-ComputerMachinePassword -Server "{{ dns_servers[0] }}" -Credential "Admin@{{ dns_domain_name }}"
+  #win_shell: $computer = Get-WmiObject Win32_ComputerSystem; $computer.UnjoinDomainOrWorkGroup("{{ domain_admin_password }}", "Admin@{{ dns_domain_name }}", 0); $computer.JoinDomainOrWorkGroup("{{ dns_domain_name }}", "{{ domain_admin_password }}", "Admin@{{ dns_domain_name }}", $null, 3)
   register: reset_domain_membership
 
 - debug:
@@ -38,10 +39,10 @@
 
 #- debug: var=windomain
 
-#- name: Add a powershell module
-#  win_psmodule:
-#    name: xComputerManagement
-#    state: present
+- name: Add a powershell module
+  win_psmodule:
+    name: xComputerManagement
+    state: present
 
 #- name: Join Workgroup
 #  win_dsc:
@@ -52,17 +53,17 @@
 #    credential_password: "{{ ansible_password }}"
 #  register: dsc_join_workgroup
 
-#- name: Join Domain
-#  win_dsc:
-#    resource_name: xComputer
-#    Name: "{{ hostname }}"
-#    DomainName: "{{ dns_domain_name }}"
-#    credential_username: "Admin@{{ dns_domain_name }}"
-#    credential_password: "{{ domain_admin_password }}"
-#  register: dsc_join_domain
+- name: Join Domain
+  win_dsc:
+    resource_name: xComputer
+    Name: "{{ hostname }}"
+    DomainName: "{{ dns_domain_name }}"
+    credential_username: "Admin@{{ dns_domain_name }}"
+    credential_password: "{{ domain_admin_password }}"
+  register: dsc_join_domain
 
-#- debug:
-#    var: dsc_join_domain
+- debug:
+    var: dsc_join_domain
 
 - name: Reboot if needed
   win_reboot:
