add creds to dsc

--- a/roles/windows-common/tasks/main.yml
+++ b/roles/windows-common/tasks/main.yml
@@ -57,12 +57,12 @@
   register: dsc_join_workgroup
 
 - debug:
-    var: hostname
+    var: hostvars[inventory_hostname]
 
 - name: Join Domain
   win_dsc:
     resource_name: xComputer
-    Name: "{{ username}}-{{ hostname }}"
+    Name: "{{ username }}-{{ hostname }}"
     DomainName: "{{ dns_domain_name }}"
     credential_username: "Admin@{{ dns_domain_name }}"
     credential_password: "{{ domain_admin_password }}"
